--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <h1>Moon of Mars</h1>
+  <h1>Moons of Mars</h1>
   <div class="grid">
     <div class="unit">
       <div class="grid">
@@ -49,6 +49,7 @@
       </div>
     </div>
   </div>
+</div>
 
 </body>
 </html>
