--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
       <div class="grid">
         <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
           <img class="img-flex" src="images/phobos.jpg" alt="">
